--- a/.github/workflows/push_latest_image_to_ecr.yml
+++ b/.github/workflows/push_latest_image_to_ecr.yml
@@ -6,8 +6,10 @@ concurrency:
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - main
+    #tags:
+    #  - "v*"
 
 jobs:
   build-and-push-image:
