--- a/.github/workflows/push_latest_image_to_ecr.yml
+++ b/.github/workflows/push_latest_image_to_ecr.yml
@@ -53,7 +53,7 @@ jobs:
           context: .
           #builder: ${{ steps.buildx.outputs.name }}
           push: false
-          tags: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          tags: '$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG'
           cache-from: type=gha
           cache-to: type=gha,mode=max
           #cache-from: type=local,src=/tmp/.buildx-cache
