--- a/.github/workflows/push_latest_image_to_ecr.yml
+++ b/.github/workflows/push_latest_image_to_ecr.yml
@@ -53,15 +53,11 @@ jobs:
           context: .
           #builder: ${{ steps.buildx.outputs.name }}
           push: false
-          tags: '$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG'
+          tags: ${{ steps.login-ecr.outputs.registry }}/portfolio:${{ env.RELEASE_VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           #cache-from: type=local,src=/tmp/.buildx-cache
           #cache-to: type=local,dest=/tmp/.buildx-cache-new
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: portfolio
-          IMAGE_TAG: ${{ env.RELEASE_VERSION }}
       
       # - name: Move cache
       #   run: |
