--- a/.github/workflows/push_latest_image_to_ecr.yml
+++ b/.github/workflows/push_latest_image_to_ecr.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v3
         with:
-          context: . Dockerfile.cache
+          context: ./Dockerfile.cache
           #builder: ${{ steps.buildx.outputs.name }}
           push: false
           tags: ${{ steps.login-ecr.outputs.registry }}/portfolio:${{ env.RELEASE_VERSION }}
