--- a/.github/workflows/push_latest_image_to_ecr.yml
+++ b/.github/workflows/push_latest_image_to_ecr.yml
@@ -47,11 +47,32 @@ jobs:
       #     restore-keys: |
       #       ${{ runner.os }}-buildx-
       
-      - name: run command
-        run: ls
+      - name: Get Changed files
+        uses: tj-actions/changed-files@v34
+        id: verify-changed-files
+        with:
+          files: |
+             requirements.txt
 
       - name: Build Docker image
         uses: docker/build-push-action@v3
+        if: steps.verify-changed-files.outputs.any_changed == 'true'
+        with:
+          context: .
+          build-args: |
+            AWS_REGION=${{ secrets.AWS_DEFAULT_REGION }}
+            VERSION=development
+          #builder: ${{ steps.buildx.outputs.name }}
+          push: false
+          tags: ${{ steps.login-ecr.outputs.registry }}/portfolio:${{ env.RELEASE_VERSION }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          #cache-from: type=local,src=/tmp/.buildx-cache
+          #cache-to: type=local,dest=/tmp/.buildx-cache-new
+      
+      - name: Build Docker image
+        uses: docker/build-push-action@v3
+        if: steps.verify-changed-files.outputs.any_changed != 'true'
         with:
           context: .
           file: Dockerfile.cache
@@ -63,8 +84,6 @@ jobs:
           tags: ${{ steps.login-ecr.outputs.registry }}/portfolio:${{ env.RELEASE_VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          #cache-from: type=local,src=/tmp/.buildx-cache
-          #cache-to: type=local,dest=/tmp/.buildx-cache-new
       
       # - name: Move cache
       #   run: |
