--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Python Syntax Checker
         uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
-      - name: Python-lint-annotate: maintain code quality with annotated PRs and pushes
+      - name: maintain code quality with annotated PRs and pushes
         uses: marian-code/python-lint-annotate@v3
       # - name: Suggest Python Type Annotations
       #   uses: typilus/typilus-action@master
