--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,22 +11,20 @@ jobs:
       - uses: actions/checkout@v2
       - name: Python Syntax Checker
         uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
-      - name: maintain code quality with annotated PRs and pushes
-        uses: marian-code/python-lint-annotate@v3
       # - name: Suggest Python Type Annotations
       #   uses: typilus/typilus-action@master
-      # - uses: datadog/action-py-black-formatter@v2.1
-      #   with:
-      #     check_mode: "true"
-      # - name: Annotate diff changes using reviewdog
-      #   if: steps.action_black.outputs.is_formatted == 'true'
-      #   uses: reviewdog/action-suggester@v1
-      #   with:
-      #     tool_name: blackfmt
-      # - name: Run pycln
-      #   run: pip3 install pycln && pycln ${GITHUB_WORKSPACE}/ --all
-      # - name: Annotate diff changes using reviewdog
-      #   uses: reviewdog/action-suggester@v1
-      #   with:
-      #     tool_name: unused-imports
+      - uses: datadog/action-py-black-formatter@v2.1
+        with:
+          check_mode: "true"
+      - name: Annotate diff changes using reviewdog
+        if: steps.action_black.outputs.is_formatted == 'true'
+        uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: blackfmt
+      - name: Run pycln
+        run: pip3 install pycln && pycln ${GITHUB_WORKSPACE}/ --all
+      - name: Annotate diff changes using reviewdog
+        uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: unused-imports
       
